syntax = "proto3";
package protobuf;
option go_package = "echo";

//--------------------request & response--------------

message Request {
    string Action = 1;
    string field1 = 2;
    string field2 = 3;
    string field3 = 4;
    string field4 = 5;
    string field5 = 6;
    string field6 = 7;
    string field7 = 8;
    string field8 = 9;
    string field9 = 10;
    string field10 = 11;
    int64 time = 12;
    int64 length = 13;
}

message Response {
    string Action = 1;
    string Msg = 2;
    bool IsEnd = 3;
}

//----------------------service-------------------
service Echo {
    rpc Send(Request) returns (Response) {}
    rpc StreamTest(stream Request) returns (stream Response) {}
    rpc TCPCostTest(stream Request) returns (stream Response) {}
}
